# SpdLogging

./: CMakeLists.txt  DockerFile  Logger.hpp  README.md  main.cpp
